# imas-codex

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.asv/results/: benchmarks.json
.claude/: settings.json
.github/skills/: sn-focus-debug.md
.github/workflows/: docker-build-push.yml
docs/: 33-cli-harmonization.html  cocos-diagnostic-tools-efit-input.html  dd-graph-hygiene.html  dd-horizon-update.html  docs-refresh.html  features-readme.html  gpu-cluster-internet-justification.html  gpu-cluster-scoping.html  phase8-smoke-results.html  plan-lifecycle-hygiene.html  plans-readme.html  sn-architectural-pivot.html  sn-benchmark-evolution.html  sn-benchmark-v1.html  sn-catalog-approval-pipeline.html  sn-catalog-quality-refactor.html  sn-closed-physical-base.html  sn-coverage-and-hygiene.html  sn-dd-attachment-completeness.html  sn-deployment-readiness.html  sn-expert-hints.html  sn-extraction-prompt-overhaul.html  sn-family-harmonization.html  sn-graph-evaluation.html  sn-pipeline-hardening.html  sn-quality-bootstrap-v2.html  sn-quality-parity.html  sn-role-benchmarks.md  sn-search-facility.html  sn-structural-repair.html  sn-structured-fanout.html  sn-west-review-rehearsal.html  strategy.html  zellij-quickstart.md
docs/_shared/: dashboard.css  project.css
docs/architecture/: boundary.md  standard-names-decisions.md  standard-names.md
docs/archive/: 38-grammar-vnext.html  container-neo4j-recovery.html  dd-graph-hygiene-s2-landed.html  dd-graph-hygiene-s3-landed.html  dd-graph-hygiene-s4-landed.html  dd-horizon-update-landed.html  dd-multi-pass-enrichment.html  dd-node-kind-classification.html  dd-unified-classification.html  isn-standard-name-kind.html  search-recall-and-enrichment.html  sn-catalog-approval-pipeline-landed.html  sn-coverage-and-hygiene-landed.html  sn-dd-attachment-completeness-s3-landed.html  sn-expert-hints-landed.html  sn-family-harmonization-landed.html  sn-structural-repair-s2a-landed.html  sn-structural-repair-s2b-landed.html  sn-west-review-rehearsal-gap-closure-landed.html  sn-west-review-rehearsal-review-entry-landed.html  sn-west-review-rehearsal-s0-1-landed.html  sn-west-review-rehearsal-s4b-landed.html  sn-west-review-rehearsal-vocab-gap-rca-landed.html
docs/research/: cli-option-matrix.html  extraction-batching-prompt-ab.html  geometric-quantity-taxonomy.html
graphs/summary/: bench_embeddings.EmbeddingBenchmarks.peakmem_encode_batch_100.json  bench_embeddings.EmbeddingBenchmarks.time_encode_batch_10.json  bench_embeddings.EmbeddingBenchmarks.time_encode_batch_100.json  bench_embeddings.EmbeddingBenchmarks.time_encode_long_text.json  bench_embeddings.EmbeddingBenchmarks.time_encode_single_query.json  bench_embeddings.EmbeddingBenchmarks.time_model_load.json  bench_graph_queries.GraphQueryBenchmarks.time_cluster_expansion.json  bench_graph_queries.GraphQueryBenchmarks.time_cross_ids_relationships.json  bench_graph_queries.GraphQueryBenchmarks.time_fulltext_search.json  bench_graph_queries.GraphQueryBenchmarks.time_ids_aggregation.json  bench_graph_queries.GraphQueryBenchmarks.time_path_traversal_enrichment.json  bench_graph_queries.GraphQueryBenchmarks.time_prefix_scan.json  bench_graph_queries.GraphQueryBenchmarks.time_vector_search_imas.json  bench_graph_queries.GraphQueryBenchmarks.time_version_chain_traversal.json  bench_mcp_facility_tools.FacilityToolBenchmarks.time_discovery_context.json  bench_mcp_facility_tools.FacilityToolBenchmarks.time_fetch_by_id.json  bench_mcp_facility_tools.FacilityToolBenchmarks.time_search_code.json  bench_mcp_facility_tools.FacilityToolBenchmarks.time_search_docs.json  bench_mcp_facility_tools.FacilityToolBenchmarks.time_search_signals.json  bench_mcp_facility_tools.FacilityToolBenchmarks.time_signal_analytics.json  bench_mcp_facility_tools.GraphSchemaToolBenchmarks.time_graph_schema_imas.json  bench_mcp_facility_tools.GraphSchemaToolBenchmarks.time_graph_schema_overview.json  bench_mcp_facility_tools.GraphSchemaToolBenchmarks.time_graph_schema_signals.json  bench_mcp_imas_tools.IMASToolBenchmarks.peakmem_export_ids.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_check_paths_batch.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_check_paths_single.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_dd_version_context.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_dd_versions.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_export_domain.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_export_ids.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_fetch_dd_error_fields.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_fetch_error_fields.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_fetch_paths_single.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_fetch_paths_with_history.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_identifiers.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_list_paths_ids.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_list_paths_leaf_only.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_list_paths_subtree.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_overview_all.json  bench_mcp_imas_tools.IMASToolBenchmarks.time_overview_filtered.json  (+40 more)
imas_codex/: __init__.py  settings.py
imas_codex/cli/: host.py  imas_dd.py  release.py  services.py  sn.py  tunnel.py
imas_codex/core/: node_categories.py  (+1 more)
plans/: README.md
research/: dedup_ab_cohort.json  dedup_ab_measurement-20260615T081657Z.json  docs_ab.json  docs_ab_gpt55.json  effort_scan_high.json  effort_scan_low.json  effort_scan_max.json  effort_scan_medium.json  enrich_ab.py  p2_consolidation_ab.json  p2_consolidation_ab_run2.json  physics_bench-20260616T061155Z.json  physics_bench-20260616T100837Z.json  physics_bench_gold.json  physics_bench_paths.json  review_effort_scan.json  review_effort_scan.py
scripts/: measure_self_refine.py  run_benchmark.py  run_domain_cycles.py  run_reviewer_bakeoff.py  select_breadth_sources.py
tests/: conftest.py  test_bench_discrimination.py  test_run_domain_cycles.py  test_settings_sn.py
(+778 files in other folders)
