[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "pydantic>=2.11.4,<3.0.0",
    "pint>=0.24.4,<0.25.0",
    "rich>=13.7.0,<14.0.0",
    "click>=8.0.0,<9.0.0",
    "networkx>=3.0,<4.0",
    "PyYAML>=6.0,<7.0",
    "ruamel-yaml>=0.18.17",
    "imas-data-dictionary>=4.1.0",
    "imas-data-dictionaries>=4.1.0",
    "imas-python>=2.0.1",
    "linkml>=1.9.3",
    "linkml-runtime>=1.9.5",
    "neo4j>=5.28.0,<6.0.0",
    "imas-standard-names @ git+https://github.com/Simon-McIntosh/IMAS-Standard-Names.git@v0.8.0rc31",
]
build-backend = "hatchling.build"

[project]
name = "imas-codex"
dynamic = ["version"]
description = "An IMAS Data Dictionary MCP server"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Simon McIntosh", email = "simon.mcintosh@iter.org" }]
license = { text = "CC BY-ND 4.0" }
keywords = [
    "IMAS",
    "MCP",
    "Model Context Protocol",
    "Data Dictionary",
    "Fusion",
    "Plasma Physics",
    "ITER",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    # --- Core: MCP server, graph queries, search, CLI ---
    "fastmcp>=3.2.0",
    "pydantic>=2.11.4,<3.0.0",
    "pint>=0.24.4,<0.25.0",
    "nest-asyncio>=1.5.0,<2.0.0",
    "click>=8.0.0,<9.0.0",
    "python-dotenv>=1.2.2",     # CVE-2026-28684
    "PyYAML>=6.0,<7.0",
    "numpy>=2.3.1",
    "cachetools>=5.3.0,<6.0.0",
    "imas-data-dictionaries>=4.1.0",
    "anyio>=4.0.0,<5.0.0",
    "rapidfuzz>=3.0.0",
    "neo4j>=5.28.0,<6.0.0",
    "ruamel-yaml>=0.18.17",
    "rich>=13.7.0,<14.0.0",
    "httpx>=0.27.0",
    "requests>=2.25.0",
    "filelock>=3.0.0",
    # Security: CVE fix requires lxml>=6.1.0 (indirect via python-pptx/python-docx)
    "lxml>=6.1.0",
    "breame>=0.1.2",
    # Security floor constraints for transitive dependencies
    "urllib3>=2.7.0",            # CVE-2026-44432, CVE-2026-44431
    "python-multipart>=0.0.27", # CVE-2026-42561, CVE-2026-40347
    "authlib>=1.6.11",          # CVE-2026-27962, CVE-2026-28498, CVE-2026-28490, CVE-2026-41425
    "aiohttp>=3.13.4",          # CVE-2026-34525 + 10 more aiohttp CVEs
    "tornado>=6.5.5",           # CVE-2026-35536, CVE-2026-31958
    "cryptography>=46.0.7",     # CVE-2026-39892, CVE-2026-34073
    "PyJWT>=2.12.0",            # CVE-2026-32597
    "Pygments>=2.20.0",         # CVE-2026-4539
]

[project.optional-dependencies]
test = [
    "torch",
    "sentence-transformers>=5.0.0",
    "pytest>=9.0.3,<10.0.0",    # CVE-2025-71176
    "pytest-cov>=6.1.1,<7.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "coverage>=7.0.0",
]
bench = ["asv>=0.6.0,<1.0.0"]
serve = [
    # Embedding server deps (GPU inference)
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]
# PyTorch backend selection - choose one:
#   uv sync --extra cpu  (default, ~2GB, no CUDA)
#   uv sync --extra gpu  (CUDA 12.1, ~6GB, torch 2.5.1 max due to iter driver)
# Both include serve deps (embedding server) for single-extra deploys.
cpu = [
    "torch",
    "sentence-transformers>=5.0.0",
    "imas-codex[serve]",
]
# LLM proxy runs via `uv tool run litellm[proxy]` — no venv deps needed.
gpu = [
    "torch==2.5.1",
    "accelerate>=1.0.0",
    "sentence-transformers>=5.0.0",
    "imas-codex[serve]",
]

[dependency-groups]
dev = [
    # --- Code quality ---
    "ruff>=0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "tqdm-stubs>=0.2.1",
    # --- Interactive dev ---
    "ipython>=9.2.0",
    "ipykernel>=6.29.5",
    # --- Standard Names catalog (install manually: uv pip install -e ../imas-standard-names) ---
    # --- LLM & Discovery ---
    "litellm>=1.83.10",         # CVE-2026-40217, CVE-2026-42271, CVE-2026-42203, CVE-2026-35030, CVE-2026-35029
    # --- Graph build & schema ---
    "linkml>=1.9.3",
    "linkml-runtime>=1.9.5",
    "imas-python>=2.0.1",
    "networkx>=3.0,<4.0",
    "scikit-learn>=1.7.2",
    "hdbscan>=0.8.41",
    # --- Wiki & document parsing ---
    "beautifulsoup4>=4.14.3",
    "Pillow>=12.2.0",           # CVE-2026-42311, CVE-2026-40192 + 3 more
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "nbformat>=5.10.4",
    "xlrd>=2.0.2",
    # --- Auth & remote ---
    "keyring>=25.7.0",
    "secretstorage>=3.5.0",
    "fabric>=3.0.0",
    "pykakasi>=2.3.0",
    "jellyfish>=1.2.1",
    # huggingface_hub is a transitive dep of sentence-transformers.
    # Only the cpu/gpu extras need it directly (for model downloads).
    # The [hf_xet] extra installs native Rust bindings that crash on some
    # environments (ITER SDCC). HF_HUB_DISABLE_XET=1 is set in __init__.py.
    # --- Tree-sitter ---
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter-gdl>=0.2.0",
    # --- Testing ---
    "pytest>=9.0.3",            # CVE-2025-71176
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.1.0",
    "xlwt>=1.3.0",
    # --- Serve (embedding + LLM proxy) ---
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
    # --- Catalog preview (mkdocs-driven via 'standard-names serve') ---
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.6.5,<10.0.0",
    "imas-standard-names @ git+https://github.com/Simon-McIntosh/IMAS-Standard-Names.git@v0.8.0rc31",
]

[project.urls]
Homepage = "https://github.com/iterorganization/imas-codex"
Repository = "https://github.com/iterorganization/imas-codex"
Documentation = "https://github.com/iterorganization/imas-codex#readme"
"Bug Tracker" = "https://github.com/iterorganization/imas-codex/issues"

[project.scripts]
imas-codex = "imas_codex.cli:main"
dd-version = "scripts.dd_version:main"
build-schemas = "scripts.build_schemas:build_schemas"
map-ids-domains = "scripts.map_ids_domains:map_ids_domains"
build-clusters = "scripts.build_clusters:build_clusters"
build-embeddings = "scripts.build_embeddings:build_embeddings"
build-database = "scripts.build_database:build_database"
build-path-map = "scripts.build_path_map:build_path_map_cli"
build-models = "scripts.build_models:build_models"
gen-physics-domains = "scripts.gen_physics_domains:gen_physics_domains"
ingest-mdsplus = "scripts.ingest_mdsplus:ingest_mdsplus"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["imas_codex", "scripts"]
exclude = ["imas_codex/resources/.gitkeep"]
artifacts = [
    "imas_codex/resources/**",
    "imas_codex/core/physics_domain.py",
    "imas_codex/graph/models.py",
    "imas_codex/graph/schema_context_data.py",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build_hooks.py"
verbose = true
ids-filter = ""
imas-dd-version = ""

[tool.imas-codex]

# Facility locations — list position determines port offsets for all services.
# Neo4j: bolt = 7687 + index, http = 7474 + index.
# Embed: server = 18765 + index.
# LLM proxy: port = 18400 + index.
# Tunneled connections add +10000 (e.g. iter tunnel → bolt 17687).
locations = ["iter", "tcv", "jt-60sa", "jet", "west", "mast-u", "asdex-u", "east", "diii-d", "kstar"]

# SSH host aliases for remote services (graph, embedding, etc.).
# When omitted, the location name is used as the SSH alias.
# Only add entries where the SSH alias differs from the location name.
[tool.imas-codex.hosts]
# iter, tcv, jt-60sa use location name as SSH alias (implicit)

[tool.imas-codex.graph]
# Location = where Neo4j runs. Use a facility name ("iter") for the login node,
# or a compute location ("titan") for SLURM-managed services.
# Compute locations are defined in {facility}.yaml under compute_locations.
# Override: IMAS_CODEX_GRAPH_LOCATION=local
location = "titan"
neo4j-version = "2026.01.4-community"  # Docker tag for Apptainer image
username = "neo4j"
password = "imas-codex"

# Explicit profile overrides (convention handles standard cases):
# [tool.imas-codex.graph.profiles.staging]
# location = "staging-server"      # Where Neo4j runs (SSH alias)
# bolt-port = 7700
# http-port = 7701
# data-dir = "/custom/path/neo4j-staging"

[tool.imas-codex.data-dictionary]
version = "4.1.0"
include-ggd = true
include-error-fields = false

[tool.imas-codex.embedding]
model = "Qwen/Qwen3-Embedding-0.6B"
dimension = 256
location = "titan"       # login node T4 (or "titan" for compute P100 via SLURM)

[tool.imas-codex.discovery]
# Minimum combined score for high-value path processing.
# Used by: enrichment auto-threshold, refinement gate, code CLI default.
# Override: IMAS_CODEX_DISCOVERY_THRESHOLD
threshold = 0.90
# Offset subtracted from threshold to get the triage gate.
# triage_threshold = threshold - triage-offset (default: 0.90 - 0.15 = 0.75).
# Override: IMAS_CODEX_TRIAGE_THRESHOLD
triage-offset = 0.15

[tool.imas-codex.logs]
# Where CLI commands run and write logs.
# MCP log tools (get_logs, list_logs, tail_logs) read from this location.
# "local" = read from local filesystem (default)
# "<facility>" = SSH to that host to read logs (e.g. "iter")
# Override: IMAS_CODEX_LOG_LOCATION
location = "iter"

[tool.imas-codex.language]
# openrouter/ prefix required so direct-path bypass preserves cache_control
# and response_cost. Without it, calls silently route through the proxy,
# stripping cache discounts (often 80%+) and zeroing cost telemetry.
# SHARED by 15+ non-SN consumers: discovery (paths, wiki, signals, code),
# DD enrichment (dd_enrichment.py), IMAS mapping (ids/mapping.py), cluster
# labeling, static discovery. SN docs generation was moved to [sn-docs]
# on 2026-05-15 to decouple SN model selection from facility discovery.
model = "openrouter/openai/gpt-5.4"
batch-size = 50

[tool.imas-codex.sn-docs]
# Phase 1 (2026-05-18): switched from local DS4-flash to GPT-5.5 after
# critical-quality regression (rsd=1.0 false positives on hallucinated
# poloidal-flux docs). Docs require strong physics fidelity — DS4-flash
# was producing plausible-but-wrong embellishment that the DS4 reviewer
# blindly approved. Switch-back to local: model="hosted_vllm/deepseek-v4-flash"
# with api-base="http://98dci4-gpu-0003:18800/v1", api-key-env="AMBIX_API_KEY".
model = "openrouter/openai/gpt-5.5"

[tool.imas-codex.sn-refine]
# Phase 1 (2026-05-18): aligned with sn-docs/sn-compose; refine is where
# bad names/docs get rewritten so it must use a strong model.
# Switch-back to local: model="hosted_vllm/deepseek-v4-flash"
# with api-base="http://98dci4-gpu-0003:18800/v1", api-key-env="AMBIX_API_KEY".
model = "openrouter/openai/gpt-5.5"

[tool.imas-codex.dd-enrichment]
# openrouter/ prefix required so direct-path bypass preserves cache_control
# and response_cost. Without it, calls silently route through the proxy,
# stripping cache discounts (often 80%+) and zeroing cost telemetry.
model = "openrouter/anthropic/claude-sonnet-4.6"

[tool.imas-codex.vision]
# openrouter/ prefix — see [language] note above.
# flash-lite is INTENTIONAL here: this section drives image OCR only
# (wiki/document page image captioning via discovery/wiki and related
# doc-ingestion paths). It is NOT used in the SN compose/review/refine
# pipeline. Flash-lite is adequate for OCR-quality transcription and
# keeps image-processing costs minimal. Any SN-pipeline model must go
# through [sn-compose], [sn-enrich], [sn-refine], or [sn-review.*] — never vision.
model = "openrouter/google/gemini-3.1-flash-lite-preview"

[tool.imas-codex.reasoning]
# openrouter/ prefix — see [dd-enrichment] note above.
model = "openrouter/anthropic/claude-sonnet-4.6"

[tool.imas-codex.sn-compose]
# Maximum concurrent LLM requests issued by the compose worker.
# Retained as the historical single-knob default for the generate
# pool; the per-pool overrides under ``[tool.imas-codex.sn-pools]``
# take precedence when set.
max-concurrency = 256
# Phase 1 (2026-05-18): switched from local DS4-flash to GPT-5.5 after the
# poloidal-flux docs regression. Compose has lower per-token criticality
# than docs (names follow tight grammar) but co-located here for vendor
# consistency and because compose is where docs context is built.
# Switch-back to local: model="hosted_vllm/deepseek-v4-flash" with
# api-base="http://98dci4-gpu-0003:18800/v1", api-key-env="AMBIX_API_KEY".
model = "openrouter/openai/gpt-5.5"
batch-size = 25
# Reasoning effort for name composition. high lifts judgment quality at
# trivial cost (review bake-off 2026-06-09 generalised to generation).
reasoning-effort = "high"
# Batch size used when ``sn generate --name-only`` groups paths by
# ``(physics_domain × unit)`` rather than ``(cluster × unit)``.  The
# name-only mode trades per-item cluster context for breadth: wider
# batches (default 50) cut LLM-call count ~70% during bootstrap at
# the cost of richer per-candidate enrichment, which the subsequent
# review / enrichment passes restore.
name-only-batch-size = 50
# Batch size used when ``sn generate --target docs`` routes through the
# five-phase enrich pipeline. Enrichment packs ~800–1200 tokens per name
# (docs, exemplars, DD context) so batches should be smaller than the
# default compose batches. Mirrors ``[tool.imas-codex.sn-enrich].batch-size``
# but allows tuning the docs-generation pass independently when invoked
# through ``sn generate``.
docs-batch-size = 12
# Pre-flight token budget guard.  Batches whose estimated token count
# exceeds this value are binary-split before dispatch.  Set below the
# model's context window (200 k) to leave headroom for the response.
max-tokens = 150000

[tool.imas-codex.sn-enrich]
# Local DeepSeek V4 Flash via vLLM on SLURM GPU node.
# Zero cost at point of use — see [sn-compose] for endpoint details.
model = "hosted_vllm/deepseek-v4-flash"
api-base = "http://98dci4-gpu-0003:18800/v1"
api-key-env = "AMBIX_API_KEY"
# Enrich packs ~800–1200 tokens per name (docs, exemplars, DD context)
# so batches should be smaller than generate batches.
batch-size = 12
# Pre-flight token budget guard (same semantics as sn-compose).
max-tokens = 150000

[tool.imas-codex.sn-pools]
# Concurrent replica counts for each of the six SN pools (see
# imas_codex/standard_names/loop.py::_build_pool_specs). Each replica
# is one cooperative ``pool_loop`` async task claiming and processing
# batches against the graph.
#
# These defaults match the empirically-validated values from earlier
# stress testing (4×H200, DeepSeek v4 flash via vLLM):
#   * 48 generate replicas peaks at ~18 paths/s end-to-end
#   * Beyond ~64 generate replicas the vLLM scheduler reports a fat
#     ``deferred`` queue (LoRA budget / KV transfer / blocked) and
#     per-call latency balloons so end-to-end throughput regresses
#     ~5× (live test 2026-05-17: 22 calls/min → 4 calls/min at 256
#     generate replicas)
#   * Review pools run at 2/3 of generate (shorter outputs)
#   * Refine pools at 1/3 of generate (small backlog)
#
# Operators override individual pool replicas without recompile via
# IMAS_CODEX_SN_POOLS_<NAME>_REPLICAS env vars (e.g.
# IMAS_CODEX_SN_POOLS_GENERATE_NAME_REPLICAS=64).
# Tuned 2026-05-17 with the local 4×H200 DeepSeek v4 flash endpoint
# (ambix vLLM serve, ``--max-num-seqs 1024 --max-num-batched-tokens
# 32768``). End-to-end throughput inflection lives between 96 and 128
# generate replicas:
#
#   iter | gen/rev/ref | vLLM running | waiting | KV %  | rate (cpm)
#   -----+-------------+--------------+---------+-------+-----------
#   1    | 96 / 64 / 32 |     265      |   0     | 30 %  |  26.4   ← optimum
#   2    | 192/128 / 64 |     359      |  76     | 43 %  |  14.2   ← deferred-queue regression
#   3    | 128/ 96 / 48 |     344      |   0     | 26 %  |  20.0   ← codex-side coordination penalty
#
# Iter 1 is the local optimum: KV cache utilization of ~30 % (vLLM
# scheduler headroom remains) but maximum end-to-end throughput.
# Beyond ~100 generate replicas the codex side (Neo4j claim contention
# + async pool coordination) becomes the bottleneck — adding GPU
# concurrency hurts rather than helps until that's addressed.
generate-name-replicas = 96
review-name-replicas = 64
refine-name-replicas = 32
generate-docs-replicas = 96
review-docs-replicas = 64
refine-docs-replicas = 32

[tool.imas-codex.sn]
# Scored-example injection targets: score thresholds for selecting
# exemplar StandardName nodes into compose/review prompts.
example-target-scores = [1.0, 0.8, 0.65, 0.4]
# Tolerance band around each target when selecting the closest example.
example-tolerance = 0.05
# Maximum examples per score bucket.
example-per-bucket = 1
# Compose retry: max retry attempts on grammar/validation failure.
retry-attempts = 1
# Hybrid-search k expansion factor used on retry.
retry-k-expansion = 12

# Desc-name similarity gate: cosine threshold below which a derived parent's
# description is considered misaligned with the name, routing the item to
# REFINE_DOCS instead of completing name review.  Calibrated in Phase 4.
desc-name-similarity-threshold = 0.55

# Default staging directory for export/preview/publish (ephemeral).
staging-dir = "~/.cache/imas-codex/staging"
# Path to ISNC git checkout. Empty = auto-discover from sibling dirs.
isnc-dir = ""

[tool.imas-codex.sn-review]
# Shared review settings (apply to both axes).
# Disagreement detection: true iff N>=2 AND max(score) - min(score) >= threshold.
disagreement-threshold = 0.20
# Maximum RD-quorum cycles (1 = primary only, 2 = blind pair, 3 = full quorum).
max-cycles = 3
# Reasoning effort (low|medium|high) for reviewer LLM calls. high lifts the
# cheap vendor-diverse reviewers to frontier discrimination at trivial cost
# (bake-off 2026-06-09). Set "none" for provider default.
reasoning-effort = "high"

[tool.imas-codex.sn-review.names]
# Phase 1 (2026-05-18): mixed-vendor RD-quorum chain.
# Cycle 0 (primary, blind): local DS4-flash — catches grammar/format/ISN
# violations for free; OK at low-stakes pass/fail signal.
# Cycle 1 (secondary, blind): Haiku 4.5 — cross-vendor cheap diversity,
# breaks the same-family bias that caused the DS4 rsd=1.0 false positives.
# Cycle 2 (escalator, context-aware): GPT-5.4 — fast, cheap, cross-vendor
# authority on disputed items. Sonnet/Opus reserved for Phase 2 reviews.
# Switch-back to single-DS4: see profile.local-only below.
models = [
  "hosted_vllm/deepseek-v4-flash",
  "openrouter/anthropic/claude-haiku-4.5",
  "openrouter/openai/gpt-5.4",
]
disagreement-threshold = 0.20
api-base = "http://98dci4-gpu-0003:18800/v1"
api-key-env = "AMBIX_API_KEY"

# ---------------------------------------------------------------------------
# Reviewer profiles — select with IMAS_CODEX_SN_REVIEW_PROFILE env var or
# the --reviewer-profile CLI flag on `sn run` / `sn review`.
# ---------------------------------------------------------------------------

[tool.imas-codex.sn-review.names.profiles.default]
# Production reviewer quorum (bake-off 2026-06-09 over the hardened gold set):
# dual-blind qwen3.7-max + minimax-m3 — cheap, vendor-diverse, reasoning-
# capable, and non-GPT so independent of the GPT-5.5 generator (no self-bias)
# — plus an opus-4.8 breaker that is stable (zero false-reject across runs)
# and fires only on blind disagreement, so its cost is amortised. deepseek-
# v4-pro was rejected (run-to-run FR instability at high effort); gemini and
# DS4-flash were the weakest reviewers. All run at reasoning effort=high
# (see [sn-review].reasoning-effort).
models = [
  "openrouter/qwen/qwen3.7-max",
  "openrouter/minimax/minimax-m3",
  "openrouter/anthropic/claude-opus-4.8",
]
disagreement-threshold = 0.20

[tool.imas-codex.sn-review.names.profiles.local-only]
# Zero-cost local-only fallback (pre-Phase-1 behavior).
# Single DS4-flash reviewer; no quorum.
models = [
  "hosted_vllm/deepseek-v4-flash",
]
disagreement-threshold = 1.0

[tool.imas-codex.sn-review.names.profiles.quality-cost-balanced]
# Pre-benchmark chain — retained as an alternative profile (requires OpenRouter credits).
models = [
  "openrouter/anthropic/claude-sonnet-4.6",
  "openrouter/openai/gpt-5.4",
  "openrouter/google/gemini-3.1-pro-preview",
]
disagreement-threshold = 0.20

[tool.imas-codex.sn-review.names.profiles.opus-only]
# Single-model mode: maximum quality, maximum cost (requires OpenRouter credits).
models = ["openrouter/anthropic/claude-opus-4.6"]
disagreement-threshold = 1.0

[tool.imas-codex.sn-review.docs]
# Mirrors the names quorum (bake-off 2026-06-09): qwen3.7-max + minimax-m3
# blind + opus-4.8 breaker, reasoning effort=high. Docs review is where
# physics regressions must be caught; the strong, stable, independent breaker
# guards against hallucinated-docs false positives on blind disagreement.
# All OpenRouter — no local api-base needed (endpoints auto-resolve per model
# in _build_kwargs; the old AMBIX vLLM endpoint was only for the dropped
# DS4-flash reviewer).
models = [
  "openrouter/qwen/qwen3.7-max",
  "openrouter/minimax/minimax-m3",
  "openrouter/anthropic/claude-opus-4.8",
]
disagreement-threshold = 0.20

[tool.imas-codex.sn-benchmark]
# Models to evaluate for standard name composition.
# Each is benchmarked independently; results are compared side-by-side.
# Format: OpenRouter model IDs (provider/model-slug).
compose-models = [
    "openrouter/anthropic/claude-opus-4.7",
    "openrouter/anthropic/claude-sonnet-4.6",
    "openrouter/anthropic/claude-haiku-4.5",
    "openrouter/openai/gpt-5.5",
    "openrouter/openai/gpt-5.4",
    "openrouter/openai/gpt-5.4-mini",
    "openrouter/google/gemini-3.1-pro-preview",
    "openrouter/google/gemini-3-flash-preview",
    "openrouter/google/gemini-3.1-flash-lite-preview",
    "openrouter/qwen/qwen3.6-plus",
    "openrouter/moonshotai/kimi-k2.6",
    "openrouter/deepseek/deepseek-v4-pro",
    "openrouter/deepseek/deepseek-v4-flash",
    "openrouter/meta-llama/llama-4-maverick",
]
# Frontier model used as independent judge for quality scoring.
# Must be a strong reasoning model — evaluates 5 dimensions (0-100).
reviewer-model = "openrouter/anthropic/claude-opus-4.6"
# Multiple reviewer models for multi-reviewer matrix benchmark.
# Each reviewer scores independently; pairwise agreement is computed.
#
# Multi-reviewer benchmark (2026-05-16, 5 compose × 3 reviewers, names+docs):
#   Opus-4.6:   best discrimination (std=0.101), names ρ=0.700 with all
#   Sonnet-4.6:  moderate ($0.054/call), names ρ=0.700 with Opus
#   GPT-5.4:     cheapest ($0.025/call), inflates +0.1, self-bias +0.18
#   Gemini-3.1-Pro: validated as escalator (highest quality in review chain)
# Reviewer-selection bake-off (2026-06-09): reviewing existing text is a
# judgment task, not generation — cheap vendor-diverse models may match
# frontier discrimination at a fraction of cost. Goal: pick a dual-blind
# pair + one quorum-breaker. Measure over benchmark gold set before
# switching the production [sn-review.*] default profile. OpenRouter
# prices/1M (in/out) noted; all but owl-alpha expose a tunable `reasoning`.
reviewer-models = [
    # Candidate blind-reviewers (cheap, vendor-diverse, reasoning-capable)
    "openrouter/openrouter/owl-alpha",          # stealth/free $0/$0, no reasoning param
    "openrouter/minimax/minimax-m3",            # MiniMax  $0.30/$1.20
    "openrouter/xiaomi/mimo-v2.5-pro",          # Xiaomi   $0.435/$0.87 (cheapest out)
    "openrouter/qwen/qwen3.7-max",              # Alibaba  $1.25/$3.75
    "openrouter/google/gemini-3.5-flash",       # Google   $1.50/$9.00
    "openrouter/moonshotai/kimi-k2.6",          # Moonshot $0.68/$3.41
    # Quorum-breaker candidates / calibrated anchors
    "openrouter/google/gemini-3.1-pro-preview", # escalator $2/$12
    "openrouter/anthropic/claude-opus-4.8",     # quality ceiling ref $5/$25
]

[tool.imas-codex.sn-fanout]
# Plan 39 — Structured fan-out for the SN compose pipeline.
# Master switch.  Phase 1B shipped at 6f0bb52b; enabled for smoke + rotation.
enabled = true
# Hard cap on Stage A query count (parse-time bound).
max-fan-degree = 3
# Per-runner and total Stage B timeouts.
function-timeout-s = 5.0
total-timeout-s = 12.0
# Per-result hit cap (renderer truncates each FanoutResult.hits).
result-hit-cap = 8
# Total evidence-block token caps (renderer truncates total evidence).
evidence-token-cap-baseline = 2000
evidence-token-cap-escalation = 800
# Stage A LLM model + sampling.
#
# Default: the locally-hosted DeepSeek v4 flash endpoint that the rest
# of the SN pipeline uses — keeps the full run at zero LLM cost. The
# proposer plan is a small structured object (parse-time bound by
# ``max-fan-degree``), so the local 13B-active MoE has been adequate
# in dev runs.
#
# Higher-capability alternatives (require OpenRouter credits, retain
# for switch-back / A-B benchmarking):
#   proposer-model = "openrouter/google/gemini-3.1-pro-preview"
#   proposer-model = "openrouter/openai/gpt-5.5"
#
# Note: Anthropic's structured-output API rejects schemas with ``oneOf``
# (``FanoutPlan`` is a discriminated union over ``fn_id``); Gemini and
# OpenAI accept it cleanly, vLLM/DeepSeek with outlines is also fine.
proposer-model = "hosted_vllm/deepseek-v4-flash"
proposer-temperature = 0.1
# Cost padding added to the parent lease at refine-cycle start (tiered, plan §7.3).
fanout-cost-estimate-baseline = 0.005
fanout-cost-estimate-escalation = 0.05
# Per-cycle hard cap on cumulative fan-out sub-event spend (tiered, plan §7.3).
fanout-max-charge-per-cycle-baseline = 0.02
fanout-max-charge-per-cycle-escalation = 0.10
# Refine trigger predicate.
# Keywords match the language reviewers actually use ("decomposition", "absorbed",
# "compound", "awkward") plus disambiguation cues. Case-insensitive substring match.
refine-trigger-keywords = ["unclear", "ambiguous", "duplicate", "consider", "compare", "decomposition", "absorbed", "compound", "awkward"]
# Reviewer-comment dim allow-list for the trigger predicate (plan §5.1 I3).
# MUST match the actual review schema: ('grammar', 'semantic', 'convention', 'completeness').
# We scan grammar + semantic because that is where decomposition/disambiguation
# defects surface (a previous default of ('clarity', 'disambiguation') silently
# disabled the trigger because those dims do not exist in the rubric).
refine-trigger-comment-dims = ["grammar", "semantic"]
# Comment excerpt total length cap (plan §5.1 S3).
refine-trigger-comment-chars = 800

[tool.imas-codex.sn-fanout.sites]
# Per-site enable flags.  Phase 1 flips refine_name to true after 1B
# wires the worker; the master `enabled` switch above gates everything.
refine_name = true

[tool.imas-codex.llm]
# LiteLLM proxy settings. Port base = 18400, offset by location index.
# Runs on login node (needs outbound HTTPS for OpenRouter/Anthropic).
location = "iter"       # facility hosting LLM proxy (or "local" for in-process)

[tool.imas-codex.docs-server]
# Host-wide HTML docs server (~/docs-server/serve.py): fronts every
# project's docs/plans-html/ under a single URL prefix and exposes a
# /state/<project>/<doc> JSON store shared by browser and agents.
# Runs on the login node — same lifetime pattern as the LLM proxy.
# Forwarded by `imas-codex tunnel start <host> --docs` (port 8765).
location = "iter"
port = 8765

[tool.hatch.envs.test]
dependencies = [
    "pytest>=9.0.3,<10.0.0",   # CVE-2025-71176
    "pytest-cov>=6.1.1,<7.0.0",
    "coverage>=7.0.0",
]

[tool.hatch.envs.dev]
dependencies = [
    "black>=23.0.0",
    "ruff>=0",
    "ipython>=9.2.0",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["imas.*", "pint.*"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Optional dependency overrides (only when installed)
[[tool.mypy.overrides]]
module = ["packaging.*"]
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
faulthandler_timeout = 60
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--no-header",
    "-q",
    "--durations=10",
    "-m", "not slow and not graph",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "fast: marks tests as fast-running unit tests",
    "performance: marks tests that focus on performance",
    "timeout: marks tests with timeout constraints (requires pytest-timeout)",
    "graph: marks tests requiring a live Neo4j connection (auto-skipped when unavailable)",
    "graph_mcp: marks graph-native MCP tests requiring Neo4j with fixture data",
    "fixture_only: marks tests that require fixture data and should be skipped on production graphs",
    "requires_graph: marks tests requiring a live Neo4j connection with DD content",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
# Performance optimizations
cache_dir = ".pytest_cache"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["imas_codex"]
omit = ["tests/*", "*/tests/*", "**/test_*.py", "**/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
precision = 2

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "C901",  # too complex
    "E501",  # long lines 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*" = ["B011", "F401", "F811"]  # Allow assert False and unused imports in tests
# Remote scripts run on Python 3.6+ systems - disable type hint and subprocess modernization
"imas_codex/remote/scripts/*" = ["UP006", "UP007", "UP021", "UP022", "UP031", "UP035", "UP038", "UP045"]

[tool.ruff.lint.isort]
known-first-party = ["imas_codex"]
force-single-line = false
combine-as-imports = true

# UV configuration: PyTorch index selection by extra
# Default sync uses cpu extra (see default-groups below)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cpu", extra = "test" },
  { index = "pytorch-gpu", extra = "gpu" },
]


[tool.uv]
prerelease = "if-necessary-or-explicit"
# cpu, gpu, and test extras for torch are mutually exclusive with gpu
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
  [
    { extra = "test" },
    { extra = "gpu" },
  ],
]
